# TuneMatrix

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  analysis_helper.py  audio_processing.py  main.py  main_window.py  models.py  pyproject.toml  requirements-build.txt  requirements-test.txt  requirements.txt  run_tests.bat  runtime_tools.py  utils.py  workers.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml
docs/: ARCHITECTURE.md  FEATURE_STATUS.md  NATIVE_ANALYSIS_HELPER.md  PACKAGING.md  RELEASE.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md
native/analysis_helper/: CMakeLists.txt  README.md  build_windows_msvc.ps1
native/analysis_helper/include/tm_analysis/: analysis_result.h  essentia_pipeline.h  json_io.h
native/analysis_helper/src/: essentia_pipeline.cpp  json_io.cpp  main.cpp
packaging/: README.md
packaging/linux/: build_deb.py  tunematrix.desktop
packaging/nsis/: TuneMatrix.nsi
packaging/pyinstaller/: TuneMatrix.spec
packaging/tools/: stage_common.py  stage_ffmpeg.py  stage_rubberband.py
scripts/: stage_runtime_tools.py
tests/: test_analysis_helper.py  test_audio_processing.py  test_main.py  test_main_window.py  test_runtime_tools.py  test_utils.py  test_workers.py
tools/: README.md
